src/snapshots/ampterm__app__Test 2-009.snap
---
source: src/app.rs
expression: self.tui.backend()
---
"Ampterm 0.1.0 | Tasks: 0                                                                                                                                        "
"┌Playlist──────────────────────────────┐┌Playlist Queue────────────────────────────────────────────────────────────────┐┌Queue (0)─────────────────────────────┐"
"│>All Music                      46    ││                                                                              ││                                      │"
"│ All Music (Smart)              46    ││                                                                              ││                                      │"
"│ Music Containi┌Tasks─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐               │"
"│ Music Containi│ID   Task                                                                                                           Status    │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"└───────────────│                                                                                                                              │───────────────┘"
"┌───────────────│                                                                                                                              │───────────────┐"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │ing...         │"
"│               │                                                                                                                              │               │"
"│               └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘               │"
"│                                                                                                            ││   ││   ││                                      │"
"│                                                                                                            ││   ││   ││                                      │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└1.3┘└050┘└──────────────────────────────────────┘"
"[NORMAL] Welcome to Ampterm. Press <?> at any point to see all of its keybindings.                                                                              "
