src/snapshots/ampterm__app__Test 2-012.snap
---
source: src/app.rs
expression: self.tui.backend()
---
"Ampterm 0.1.0 | Tasks: 0                                                                                                                                        "
"┌Playlist──────────────────────────────┐┌Playlist Queue────────────────────────────────────────────────────────────────┐┌Queue (0)─────────────────────────────┐"
"│>All Music                      46    ││                                                                              ││                                      │"
"│ All Music (Smart)              46    ││                                                                              ││                                      │"
"│ Music Containi┌(2/2) Help for ← Global →─────────────────────────────────────────────────────────────────────────────────────────────────────┐               │"
"│ Music Containi│$                                        Skip to next music                                                                   │               │"
"│               │0                                        Rewind to start                                                                      │               │"
"│               │?                                        Toggle help menu                                                                     │               │"
"│               │Ctrl-Down                                Decrease playback speed by 0.05                                                      │               │"
"│               │Ctrl-Space                               Set playback speed to 1                                                              │               │"
"│               │Ctrl-Up                                  Increase playback speed by 0.05                                                      │               │"
"│               │Ctrl-w Down                              Focus window below                                                                   │               │"
"│               │Ctrl-w Left                              Focus window on the left                                                             │               │"
"│               │Ctrl-w Right                             Focus window on the right                                                            │               │"
"│               │Ctrl-w Up                                Focus window above                                                                   │               │"
"│               │Ctrl-w h                                 Focus window on the left                                                             │               │"
"│               │Ctrl-w j                                 Focus window below                                                                   │               │"
"│               │Ctrl-w k                                 Focus window above                                                                   │               │"
"│               │Ctrl-w l                                 Focus window on the right                                                            │               │"
"│               │Ctrl-w q                                 Quit program                                                                         │               │"
"│               │Esc                                      Reset key sequence                                                                   │               │"
"│               │Shift-Down                               Decrease volume by 0.05                                                              │               │"
"│               │Shift-J                                  Skip to next music                                                                   │               │"
"│               │Shift-K                                  Skip to previous music                                                               │               │"
"│               │Shift-Left                               Seek backwards 5 seconds                                                             │               │"
"│               │Shift-Right                              Seek forward 5 seconds                                                               │               │"
"│               │Shift-T                                  Toggle tasks view                                                                    │               │"
"│               │Shift-Up                                 Increase volume by 0.05                                                              │               │"
"└───────────────│Space                                    Play/Pause                                                                           │───────────────┘"
"┌───────────────│t                                        Tap to BPM                                                                           │───────────────┐"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │ing...         │"
"│               │                                                                                                                              │               │"
"│               └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘               │"
"│                                                                                                            ││   ││   ││                                      │"
"│                                                                                                            ││   ││   ││                                      │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└1.1┘└050┘└──────────────────────────────────────┘"
"[NORMAL] Welcome to Ampterm. Press <?> at any point to see all of its keybindings.                                                                              "
