src/snapshots/ampterm__app__Test 2-013.snap
---
source: src/app.rs
expression: self.tui.backend()
---
"Ampterm 0.1.0 | Tasks: 0                                                                                                                                        "
"┌Playlist──────────────────────────────┐┌Playlist Queue────────────────────────────────────────────────────────────────┐┌Queue (0)─────────────────────────────┐"
"│>All Music                     46     ││                                                                              ││                                      │"
"│ All Music (Smart)             46     ││                                                                              ││                                      │"
"│ Music Containi┌(1/2) Help for ← PlaylistList →───────────────────────────────────────────────────────────────────────────────────────────────┐               │"
"│ Music Containi│Enter                                    Open selected playlist                                                               │               │"
"│               │Shift-A                                  Append the entire playlist to the end of the queue                                   │               │"
"│               │Shift-I                                  View details of the current playlist                                                 │               │"
"│               │Shift-R                                  Refresh the playlist list                                                            │               │"
"│               │a                                        Play the entire playlist next                                                        │               │"
"│               │i                                        Play the entire playlist immediately                                                 │               │"
"│               │r Shift-A                                Shuffle the playlist and append it to the queue                                      │               │"
"│               │r Shift-I                                Shuffle the playlist and play it immediately                                         │               │"
"│               │r a                                      Shuffle the playlist and play it next                                                │               │"
"│               │r i                                      Shuffle the playlist and play it immediately                                         │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"└───────────────│                                                                                                                              │───────────────┘"
"┌───────────────│                                                                                                                              │───────────────┐"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │               │"
"│               │                                                                                                                              │ing...         │"
"│               │                                                                                                                              │               │"
"│               └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘               │"
"│                                                                                                            ││   ││   ││                                      │"
"│                                                                                                            ││   ││   ││                                      │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└1.3┘└050┘└──────────────────────────────────────┘"
"[NORMAL] Welcome to Ampterm. Press <?> at any point to see all of its keybindings.                                                                              "
